<resources>
    <string name="app_name">pjPongMusicPlayer</string>
    <string name="title_activity_login">login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="ic_persion">ic_persion</string>
    <string name="ic_brand">ic_brand</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="note">Click vào nơi bất kỳ để tiếp tục :3</string>
    <string name="phone">Số điện thoại</string>
    <string name="password2">Xác nhận mật khẩu</string>
    <string name="hoten">Ngày sinh</string>
    <string name="h_v_t_n">Họ và Tên</string>
    <string name="ng_y_sinh">Ngày sinh</string>

</resources>