<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C2DCDC"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="-120dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="113dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#FFFFE4"
            android:contentDescription="@string/ic_brand"
            android:hapticFeedbackEnabled="false"
            app:srcCompat="@drawable/brand_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageViewName"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/ic_persion"
                app:srcCompat="@drawable/ic_baseline_drive_file_rename_outline_24" />

            <EditText
                android:id="@+id/edNameRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/h_v_t_n"
                android:inputType="textPersonName" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageViewPhone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_baseline_phone_android_24" />

            <EditText
                android:id="@+id/edPhoneRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/phone"
                android:ems="10"
                android:inputType="phone"
                android:autofillHints="" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageViewDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/ic_persion"
                app:srcCompat="@drawable/ic_baseline_date_range_24" />

            <EditText
                android:id="@+id/edBirthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/ng_y_sinh"
                android:ems="10"
                android:inputType="date"
                android:autofillHints="" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/ic_persion"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <EditText
                android:id="@+id/edAccountRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account"
                android:inputType="textPersonName" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

            <EditText
                android:id="@+id/edPasswordRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

            <EditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#D81B60"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>