<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C2DCDC"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="0dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="135dp"
            android:layout_marginRight="135dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#FFFFE4"
            android:contentDescription="@string/ic_brand"
            android:hapticFeedbackEnabled="false"
            app:srcCompat="@drawable/brand_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/ic_persion"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/account"
                android:inputType="textPersonName" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#00ACC1">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_edit_text"
            android:backgroundTint="#D81B60"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_non_border"
            android:shadowColor="#00E10404"
            android:text="Register"
            android:textAllCaps="true"
            android:textColor="#E40255"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/border_circle"
            android:backgroundTint="#D81B60"
            android:paddingTop="17dp"
            android:text="hoặc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FAF1F1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <Button
                android:id="@+id/button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edit_text"
                android:backgroundTint="#2D88FF"
                android:drawableRight="@drawable/ic_baseline_facebook_24"
                android:text="Facebook   "
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="18dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edit_text"
                android:backgroundTint="#EA4335"
                android:drawableRight="@drawable/ic_baseline_email_24"
                android:text="Google"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>